packages/kit/test/apps/basics/src/routes/load/invalidation/forced/+page.server.js
import { increment } from '../../state.js';
export const load = () => {
	return {
		b: increment(import.meta.url)
	};
};
